# gpui-starter

./: Cargo.toml  README.md  cargo-generate.toml
src/: app.rs  app_menus.rs  main.rs  screens.rs  theme.rs  ui.rs
src/screens/: home.rs
src/ui/: app_title_bar.rs
